<resources>
    <string name="app_name">TasteBonanza</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_onboarding">Savory Solutions</string>
    <string name="text_onboarding">Using state-of-the-art natural language processing, it suggests personalized recipes based on your preferences, dietary needs, and available ingredients.</string>
    <string name="skip_for_now">skip for now</string>
    <string name="let_s_begin">Let’s Begin!</string>
    <string name="create_account1">What cooking equipment do you have access to?</string>
    <string name="skip">Skip</string>

    <string name="equipment1">Oven</string>
    <string name="equipment2">Stovetop</string>
    <string name="equipment3">Slow Cooker</string>
    <string name="equipment4">Microwave</string>
    <string name="equipment5">Blender</string>
    <string name="equipment6">Grill</string>
    <string name="equipment7">Air Fryer</string>
    <string name="create_account2">How much do you enjoy cooking?</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="create_account3">How often do you cook meals from scratch?</string>
    <string name="rarely">Rarely</string>
    <string name="occasionally">Occasionally</string>
    <string name="weekly">Weekly</string>
    <string name="several_times_a_week">Several times a week</string>
    <string name="almost_every_day">Almost every day</string>
    <string name="what_do_you_enjoy_most_about_the_process_of_cooking">What do you enjoy most about the process of cooking?</string>
    <string name="developing_new_skills">Developing new skills</string>
    <string name="relaxation_and_stress_relief">Relaxation and stress relief</string>
    <string name="sharing_meals_with_others">Sharing meals with others</string>
    <string name="trying_new_recipes">Trying new recipes</string>
    <string name="creativity_and_experimentation">Creativity and experimentation</string>

    <string name="recipe_name1">Spaghetti bolognese</string>
    <string name="tag1">dinner</string>

    <string name="ing1">Minced meat</string>
    <string name="ingEg1">gr</string>
    <string name="ing2">Onion</string>
    <string name="ingEg2">pc.</string>
    <string name="ing3">Carrots</string>
    <string name="ingEg3">gr</string>
    <string name="ing4">Celery stalk</string>
    <string name="ing5">Olive oil</string>
    <string name="ing6">tablespoons</string>
    <string name="ing7">butter</string>
    <string name="ing8">Fat cream</string>
    <string name="ing9">White wine</string>
    <string name="ingEg9">ml</string>
    <string name="ing10">Tomato paste</string>
    <string name="ingEg10">tablespoons</string>
    <string name="ing11">Tomatoes</string>

    <string name="recipe1">1. In a deep frying pan or saucepan, heat the olive oil over medium heat.
2. Add onion, celery, carrot and garlic. Fry the vegetables until soft, about 5-7 minutes.
3. Add the minced meat and cook it until brown, breaking it into small pieces.
4. Add tomato paste and canned tomatoes, mix. Cook for a few minutes to thicken the sauce.
5. Gradually add beef or vegetable broth to make the sauce more liquid. Season with salt and pepper to taste.
6. Reduce the heat to low, cover and cook the bolognese for about 1-2 hours, stirring occasionally.
7. Cook spaghetti or other pasta according to the instructions on the package.
8. Serve the bolognese with spaghetti or other pasta. Sprinkle parmesan on top, if desired.</string>

    <string name="recipe_name2">Pizza Margherita</string>
    <string name="tag2">supper</string>
    <string name="recipe2">1. Preheat the oven to 220 degrees Celsius.
2. Roll out the pizza ball on a baking sheet greased with olive oil. If you have already prepared the dough, unfold it on a baking sheet.
3. Apply tomato sauce evenly to the dough, leaving the edges free for crusts.
4. Grate the mozzarella on a coarse grater and spread it evenly over the sauce.
5. Cut the tomatoes into thin slices and put them on the pizza.
6. Sprinkle the pizza with basil, salt and pepper to taste.
7. Put the pizza in the preheated oven and cook for about 12-15 minutes, or until the crust turns golden and the cheese melts.
8. After cooking the pizza Margarita, let it cool down a little, then cut into pieces and serve.</string>
    <string name="ing21">pizza ball (pizza dough)</string>
    <string name="ing22">cup tomato sauce</string>
    <string name="ing23">grams of mozzarella</string>
    <string name="ing24">tomatoes</string>
    <string name="ing25">Fresh basil or dried basil</string>
    <string name="ing26">Salt and pepper to taste</string>
    <string name="ing27">Olive oil</string>

    <string name="recipe_name3">Caesar Salad</string>
    <string name="recipe3">1. Prepare the chicken breast: cut it into pieces and fry it in a frying pan with oil until golden brown. Let cool and cut into smaller pieces.
2. Prepare the salad: wash and dry the lettuce leaves, then tear them into several pieces.
3. Prepare the sauce: in a salad bowl, mix olive oil, lemon juice, garlic, salt and pepper passed through a press. Mix well.
4. Add the salad leaves to the salad bowl and mix thoroughly with the sauce.
5. Sprinkle the salad with grated parmesan and croutons. Stir again.
6. Garnish the caesar salad with chicken pieces on top.
7. Serve Caesar salad immediately.</string>
    <string name="ing31">head of romano or iceberg lettuce</string>
    <string name="ing32">chicken breasts</string>
    <string name="ing33">cup croutons (toasted bread)</string>
    <string name="ing34">cup grated parmesan</string>
    <string name="ing35">cup olive oil</string>
    <string name="ing36">tablespoons lemon juice</string>
    <string name="ing37">cloves of garlic</string>
    <string name="servings">servings</string>
    <string name="time">time</string>
    <string name="calories">calories</string>
    <string name="ingredients">Ingredients</string>
    <string name="let_s_cook">Let’s Cook!</string>
    <string name="back_to_ingredients">Back to ingredients</string>
    <string name="cooking_instruction">Cooking Instruction:</string>
    <string name="beginner">Beginner</string>
    <string name="study">Study</string>
    <string name="neutral">Neutral</string>
    <string name="good">Good</string>
    <string name="excellent">Excellent</string>
</resources>