<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.CreateProcessFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/ic_fon1"
        android:fitsSystemWindows="true"
        android:preserveLegacyExternalStorage="true"
        android:requestLegacyExternalStorage="true"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/what_do_you_enjoy_most_about_the_process_of_cooking"
        android:fontFamily="@font/poppins_bold"
        android:shadowColor="@color/black2"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="10"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="90dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="12dp"
                android:layout_height="4dp"
                android:background="@drawable/bg_slide_false" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="12dp"
                android:layout_height="4dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/bg_slide_false" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="12dp"
                android:layout_height="4dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/bg_slide_false" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="104dp"
                android:layout_height="4dp"
                android:layout_marginStart="5dp"
                android:background="@drawable/bg_slide_tru" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bt_next"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:background="@drawable/bg_bt"
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_forward"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.55"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/bt_back"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/bg_bt"
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/bt_next"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.75"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tv_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:fontFamily="@font/poppins"
            android:shadowColor="@color/black2"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="10"
            android:padding="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toStartOf="@+id/constraintLayout2"
            app:layout_constraintStart_toEndOf="@+id/linearLayout"
            app:layout_constraintTop_toTopOf="@+id/linearLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box_cook1"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_equipment_item"
            android:paddingStart="8dp"
            android:paddingEnd="1dp"
            android:elevation="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_cook1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/creativity_and_experimentation"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/checkBox1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box_cook2"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_equipment_item"
            android:paddingStart="8dp"
            android:paddingEnd="1dp"
            android:elevation="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_cook2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/trying_new_recipes"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:textSize="18sp"
                android:includeFontPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box_cook3"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_equipment_item"
            android:paddingStart="8dp"
            android:paddingEnd="1dp"
            android:elevation="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_cook3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:includeFontPadding="false"
                android:text="@string/sharing_meals_with_others"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingEnd="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/checkBox3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box_cook4"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_equipment_item"
            android:paddingStart="8dp"
            android:paddingEnd="1dp"
            android:elevation="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_cook4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/relaxation_and_stress_relief"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:textSize="18sp"
                android:includeFontPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/box_cook5"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/bg_equipment_item"
            android:paddingStart="8dp"
            android:paddingEnd="1dp"
            android:elevation="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:id="@+id/tv_cook5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developing_new_skills"
                android:textColor="@color/white"
                android:fontFamily="@font/poppins_medium"
                android:textSize="18sp"
                android:includeFontPadding="false"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/checkBox5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:minWidth="0dp"
                android:minHeight="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>